Fix spacing on games for homepage

--- a/src/global.sass
+++ b/src/global.sass
@@ -1,11 +1,11 @@
 :root
-	light mode
-	--background: #e6e4e3
-	--accent: #fff
-	--accent2: #c6c4c3
-	--accent3: #a6a4a3
-	--dark-text: #212529
-	--light-text: #f6f4f3
+	// light mode
+	// --background: #e6e4e3
+	// --accent: #fff
+	// --accent2: #c6c4c3
+	// --accent3: #a6a4a3
+	// --dark-text: #212529
+	// --light-text: #f6f4f3
 
 	// dark mode
 	--background: #161413
